# CPP_Person_Class_Demo

./: .gitignore  .project  CGugelPush  CMakeLists.txt  LICENSE.md  Main2.cpp  Person.cpp  Person.h  PrimaryClass  PrimaryClass.cpp  PrimaryClass.h  Readme.md  Student.cpp  Student.h  kylah_test.md  lab_13.cpp  main.cpp
docs/: BR_Khalid_Doc_Update.md  BranchNotes.md  Camden_Welander_md  Camden_Welander_md_file.md  GitHelp.md  Khalid_Branch.md  agustin_update.md  angels_file.md  br_Kinney_doc_update.md  br_bhavnoor.md  br_quincy_doc_update.md  br_sotirovski_doc_update.md  br_update_2024_demo.md
docs/challenge/: br_bhavnoor_update.md  br_santiago.md  joeishizaki.md
docs/challenge/9ers/: Kinney.md  Merlin.md  Player.cpp  Player.h  Project_main.cpp  Team.cpp  Team.h  TeamParentClass.cpp  TeamParentClass.h
docs/challenge/AlexAProject/: Alex_A_Project.cpp  Alex_A_Project.h  Main.cpp  characterSheet.cpp  characterSheet.h  readMe.md
docs/challenge/CWhittenhall/: Gugel.md  Whittenhall  Whittenhall.md
docs/challenge/CamCassieFunTimes/: Animal.cpp  Animal.h  README.md  catdog.cpp  catdog.h  main.cpp
docs/challenge/JObase/: Person.cpp  Person.h  Person.h.gch  README.md  a.out  main.cpp  player.cpp  player.h
docs/challenge/KDcars/: Anderesn.md  Cars.cpp  Mahmood.md  br_dev.md  cars.h  honda.cpp  honda.h  khalid.md  main  main.cpp  read.md  readme.md
docs/challenge/SheaAndWissam/: LiveCode.md  Person.cpp  Person.h  Shea.md  (+5 more)
docs/demos_help/: br_quincy_doc_update.md  br_update_2024_demo.md  prompt_engineer_assignments.md  prompts_only_github.md  reply_and_prompt_github.md
(+87 files in other folders)
